--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
   .card {
     background-color: hsl(0, 0%, 100%);
     width: 380px;
-    padding: 18px;
+    height: 500px;
+    padding: 14px;
     border-radius: 12px;
     border: 0.5px solid hsl(0, 0%, 7%);
 
@@ -23,6 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     font-family: "Figtree", sans-serif;
 
@@ -37,8 +39,7 @@
   .text {
     color: hsl(0, 0%, 7%);
     font-size: 16px;
-    margin: 18px 0;
-
+    margin: 14px 8px;
   }
   .text button {
     background-color: hsl(47, 88%, 63%);
@@ -48,11 +49,11 @@
     font-weight: 800;
   }
   .text .Published {
-    margin: 18px 0;
+    margin: 14px 0;
     font-size: 14px;
   }
   .text .paragraph {
-    margin: 12px 0;
+    margin: 10px 0;
     color: hsl(0, 0%, 50%);
   }
 
@@ -62,6 +63,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    padding: 0 8px;
   }
   .name .img {
     width: 30px;
